# librius

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STRUCTURE.md  build.rs  cargo.toml
.github/: copilot-custom.json  copilot-instructions.md
.github/workflows/: ci.yml
res/: librius.rc  librius.res
scripts/: extract_translations.py
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  utils.rs
src/cli/: args.rs  dispatch.rs  fields.rs  mod.rs
src/commands/: add.rs  add_book.rs  backup.rs  config.rs  db.rs  del_book.rs  edit_book.rs  export.rs  import.rs  list.rs  mod.rs  search_book.rs
src/config/: load_config.rs  migrate.rs  mod.rs
src/db/: books.rs  connection.rs  load_db.rs  migrate.rs  migrate_db.rs  mod.rs  search.rs
src/i18n/: loader.rs  mod.rs
src/i18n/locales/: README.md  en.json  it.json
src/models/: book.rs  display.rs  mod.rs
src/utils/: fields.rs  import_helpers.rs  isbn.rs  lang.rs  log.rs  mod.rs  print.rs  table.rs  verbose.rs
tests/: common.rs  db_tests.rs  isbn_tests.rs  librius_core_tests.rs
tools/: check_submodule.ps1  check_submodule.sh
