[package]
name = "librius"
version = "0.2.2"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@github.com>"]
description = "A personal library manager CLI written in Rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/umpire274/librius"
repository = "https://github.com/umpire274/rbackup"
keywords = ["books", "library", "cli", "sqlite", "manager"]
categories = ["command-line-utilities", "database", "data-structures", "rust-patterns"]
exclude = [
    "target/*",
    ".idea/*",
    ".github/*",
    ".gitignore",
    "config/*",
    "*.sh",
    "*.bat",
]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_yaml = "0.9.33"
rusqlite = { version = "0.37.0", features = ["bundled"] }
colored = "3.0.0"
i18n = "0.0.2"
once_cell = "1.21.3"
serde_json = "1.0.145"

[profile.release]
opt-level = 3
