[package]
name = "librius"
version = "0.5.0"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "A personal library manager CLI written in Rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/umpire274/librius"
repository = "https://github.com/umpire274/librius"
keywords = ["books", "library", "cli", "sqlite", "manager"]
categories = ["command-line-utilities", "database", "data-structures", "rust-patterns"]
build = "build.rs"

[package.metadata.bundle]
name = "Librius"
identifier = "eu.umpire274.librius"
icon = ["res/librius.png"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
chrono = { version = "0.4.42", features = ["serde"] }
serde_yaml = "0.9.33"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
colored = "3.0.0"
zip = { version = "6.0.0", optional = true }
flate2 = { version = "1.1.5", optional = true }
tar = { version = "0.4.44", optional = true }
dirs = "6.0.0"
umya-spreadsheet = "2.3.3"
csv = "1.4.0"
tabled = "0.20.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
isbn2 = "0.4.0"

[target.'cfg(windows)'.dependencies]
zip = "6.0.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.1.4"
tar = "0.4.44"

[build-dependencies]
winresource = "0.1.27"

[profile.release]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
rusqlite = { version = "0.37.0", features = ["chrono"] }
