[package]
name = "librius"
version = "0.6.0"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "A personal library manager CLI written in Rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/umpire274/librius"
repository = "https://github.com/umpire274/librius"
keywords = ["books", "library", "cli", "sqlite", "manager"]
categories = ["command-line-utilities", "database", "data-structures", "rust-patterns"]
build = "build.rs"

[package.metadata.bundle]
name = "Librius"
identifier = "eu.umpire274.librius"
icon = ["res/librius.png"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
chrono = { version = "0.4.44", features = ["serde"] }
serde_yaml = "0.9.33"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
colored = "3.1.1"
zip = { version = "8.6.0", optional = true }
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.45", optional = true }
dirs = "6.0.0"
umya-spreadsheet = "2.3.3"
csv = "1.4.0"
tabled = "0.20.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
isbn2 = "0.4.0"

[target.'cfg(windows)'.dependencies]
zip = "8.6.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.1.4"
tar = "0.4.44"

[build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
rusqlite = { version = "0.39.0", features = ["chrono"] }
